force-app/main/default/objects/vlocity_ins__GlobalAutoNumberSetting__c/fields/vlocity_ins__LeftPadDigit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LeftPadDigit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeftPadDigit</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>