force-app/main/default/objects/vlocity_ins__GlobalAutoNumberSetting__c/fields/vlocity_ins__Prefix__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Prefix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>